--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: BY Blog
 SEOTitle: 降解黑科技 | Interpretation of black technology
 header-img: img/post-bg-desk.jpg
 email: weipeng.su@outlook.com
-description: "Every failure is leading towards success."
+description: "每个胜利背后都有许多尝试"
 keyword: "BY, black technology, 降解黑科技, suweipeng, 苏卫朋"
 url: "http://suweipeng.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
