--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: 降解黑科技
 SEOTitle: 降解黑科技 | Interpretation of black technology
 header-img: img/post-bg-desk.jpg
 email: weipeng.su@outlook.com
