--- a/_config.yml
+++ b/_config.yml
@@ -57,16 +57,16 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: suweipeng
+# disqus_username: njyouzhiyong
 
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-  repo: suweipeng.github.io    #仓库名称
-  owner: suweipeng    #github用户名
-  admin: suweipeng
+  repo: njyouzhiyong.github.io    #仓库名称
+  owner: njyouzhiyong    #github用户名
+  admin: njyouzhiyong
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
