--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ github_repo: "https://github.com/njyouzhiyong/njyouzhiyong.github.io.git" # you 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/weixin_suwp.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "no money"
+#sidebar-avatar: /img/weixin_suwp.png      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
